<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/city_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="北京" />

            <ImageView
                android:id="@+id/arrow_down_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_arrow_down" 
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="55"
            android:background="@drawable/input_select"
            android:gravity="center_vertical"
            android:padding="5dp" 
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:hint="@string/search_txt_hint" >
            </TextView>
        </LinearLayout>

        <ImageView
            android:id="@+id/mic_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:clickable="true"
            android:src="@drawable/mic_search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="附近" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/food_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/food" 
                        	android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_food" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/view_spot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/outing" 
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_spot" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/hotel_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/hotel" 
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pub" 
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_food" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/snake"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/chinesesnack" 
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_food" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/more_classify"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/more" 
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_food" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:id="@+id/member_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/search_list_bg"
                android:gravity="center_vertical"
                android:clickable="true">
                <TextView 
                    android:id="@+id/member_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/membership_card"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_below="@id/member_txt"
                    android:text="@string/member_card_tip" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />
                
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/search_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/search_list_bg"
                android:clickable="true">
                <TextView 
                    android:id="@+id/search_all_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/search_hole_city"/>

                <TextView
                    android:id="@+id/search_all_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_below="@id/search_all_txt"
                    android:text="@string/search_hole_city_tip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/search_list_bg"
                android:clickable="true">
                <TextView 
                    android:id="@+id/ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/ranking"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_below="@id/ranking"
                    android:text="@string/ranking_tip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/search_list_bg"
                android:clickable="true">
                <TextView 
                    android:id="@+id/coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/coupon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_below="@id/coupon"
                    android:text="@string/coupon_tip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>